# polyhook

./: CHANGELOG.md  CMakeLists.txt  polyhook.pplugin.in
src/: callback.cpp  callback.hpp  hash.hpp  plugin.cpp  plugin.hpp  scope_guard.hpp
sym/: exported_symbols.lds  version_script.lds
